Fix letter and word spacing for text inputs in Russian

--- a/play.css
+++ b/play.css
@@ -9,7 +9,7 @@ html, input[type='text'], select, #ioControls button {
   font-size: 16px;
 }
 
-html[lang='ru'], html[lang='ru'] input[type='text'], html[lang='ru'] select, html[lang='ru'] #ioControls button {
+html[lang='ru'], html[lang='ru'] select, html[lang='ru'] #ioControls button {
   letter-spacing: -4px;
   word-spacing: 4px;
 }
